Create contexts blueprint
